modified:   index.html modified:   js/betterMain.js

--- a/index.html
+++ b/index.html
@@ -51,5 +51,6 @@
     <h3>opdracht 1a</h3>
     <div class="opdracht1"></div>
     <div class="opdracht2"></div>
+    <div class="opdracht4"></div>
 </body>
 </html>
